openshift/git_service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: git
  name: git
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: git
    deploymentconfig: git
  sessionAffinity: None
  type: ClusterIP
