openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: accounts
  name: accounts
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: accounts
    deploymentconfig: accounts
  sessionAffinity: None
  type: ClusterIP
