openshift/git_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: git
  name: git
spec:
  host: git.app.okd.supercass.com
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
  to:
    kind: Service
    name: git
    weight: 100
  wildcardPolicy: None
