openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: accounts
  name: accounts
spec:
  host: accounts.app.okd.supercass.com
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
  to:
    kind: Service
    name: accounts
    weight: 100
  wildcardPolicy: None
